# mpv-remote

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mpv-play.c  mpv-remote.c
http/: password
http/public/: auth.js  browser.js  controller.js  footer.html  home.css  index.html  loader.js  settings.css  settings.html  settings.js  styles.css
libremote/: command.c  command.h  config.h.in  environment.c  libremote.h  logger.c  logger.h  status.c  status.h
libremote/cmd_rsp/: cmd_rsp.c  cmd_rsp.h
mpv/lib/x64/: mpv.lib
player/: http.c  main.c  player.c  player.h
player/http/: auth.c  auth.h  con_type.h  config.h.in  get.c  http.c  http.h  post.c
remote/: main.c
test/: command.cpp  config.h.in  invalid_input.json  logger.cpp  missing_input_1.json  missing_input_2.json  player.cpp  status.cpp  valid_input.json
